--- a/gradle.properties
+++ b/gradle.properties
@@ -14,8 +14,8 @@
 # limitations under the License.
 #
 
-ideaEdition = IC
-ideaVersion = 2018.3
+ideaEdition = IU
+ideaVersion = 2018.3.4
 intellijRepoUrl = https://www.jetbrains.com/intellij-repository
 intellijRepoChannel = alpha
 version = 18.12.1-alpha-SNAPSHOT
